syntax = "proto3";

package robot;

service RobotService {

}